--- a/vc8_0/TorrentWizard.vcproj
+++ b/vc8_0/TorrentWizard.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="Torrentaid"
+	Name="TorrentWizard"
 	ProjectGUID="{2EFD2DB3-DC1D-4D81-9488-EAFBBB87471D}"
 	>
 	<Platforms>
@@ -49,7 +49,7 @@
 				BufferSecurityCheck="true"
 				TreatWChar_tAsBuiltInType="true"
 				ForceConformanceInForLoopScope="true"
-				RuntimeTypeInfo="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="4"
@@ -134,7 +134,7 @@
 				BufferSecurityCheck="true"
 				TreatWChar_tAsBuiltInType="true"
 				ForceConformanceInForLoopScope="true"
-				RuntimeTypeInfo="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="4"
@@ -221,7 +221,7 @@
 				RuntimeLibrary="0"
 				TreatWChar_tAsBuiltInType="true"
 				ForceConformanceInForLoopScope="true"
-				RuntimeTypeInfo="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="4"
@@ -308,7 +308,7 @@
 				RuntimeLibrary="0"
 				TreatWChar_tAsBuiltInType="true"
 				ForceConformanceInForLoopScope="true"
-				RuntimeTypeInfo="true"
+				RuntimeTypeInfo="false"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
 				WarningLevel="4"
@@ -641,10 +641,6 @@
 			>
 			<File
 				RelativePath="..\torrentaid\Res\Hand.cur"
-				>
-			</File>
-			<File
-				RelativePath="..\torrentaid\Res\Manifest.xml"
 				>
 			</File>
 			<File
