VS8: Add missing define in skin-installer project.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7144 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/skin-installer.vcproj
+++ b/vc8_0/skin-installer.vcproj
@@ -211,7 +211,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)..\shareaza\zlib"
-				PreprocessorDefinitions="WIN32;NDEBUG;ZLIB_WINAPI;ZLIB_DLL;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;ZLIB_WINAPI;ZLIB_DLL;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
@@ -296,7 +296,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="$(SolutionDir)..\shareaza\zlib"
-				PreprocessorDefinitions="WIN64;NDEBUG;ZLIB_WINAPI;ZLIB_DLL;_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="WIN64;NDEBUG;_WINDOWS;ZLIB_WINAPI;ZLIB_DLL;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				RuntimeTypeInfo="false"
