--- a/plugins/ZIPBuilder/ZIPBuilder_9.vcproj
+++ b/plugins/ZIPBuilder/ZIPBuilder_9.vcproj
@@ -244,10 +244,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				InlineFunctionExpansion="1"
+				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="$(InputDir);../../shareaza/zlib"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;ZLIB_DLL;ZLIB_WINAPI"
 				StringPooling="true"
@@ -343,10 +344,11 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				InlineFunctionExpansion="1"
+				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="$(InputDir);../../shareaza/zlib"
 				PreprocessorDefinitions="WIN64;_WINDOWS;NDEBUG;_USRDLL;ZLIB_DLL;ZLIB_WINAPI"
 				StringPooling="true"
