Disabled cookie send for BitTorrent trackers, it fixed some very strange and buggy trackers. Added CHttpRequest::EnableCookie() method. Enhanced BitTorrent tracker logging. Removed IDS_BT_TRACKER_RETRY string.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7152 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4060,9 +4060,8 @@ BEGIN
     IDS_BT_SEED_COPY_FAIL   "An error occurred while copying from ""%s"" to a BitTorrent share file."
     IDS_BT_SEED_ERROR       "An unknown error occurred while trying to seed ""%s""."
     IDS_BT_SEED_VERIFY_FAIL "An error was detected in the file ""%s""."
-    IDS_BT_TRACKER_RETRY    "Tracker did not respond- Retrying announce (%i of %i)"
     IDS_BT_TRACKER_DOWN     "Unable to communicate with tracker"
-    IDS_BT_TRACKER_MULTI    "Tracker failed- Trying next tracker (%i of %i)"
+    IDS_BT_TRACKER_MULTI    "Trying next tracker (%i of %i)"
 END
 
 STRINGTABLE 
