Fixed project cleanup
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7179 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/sqlite3/sqlite3_9.vcproj
+++ b/sqlite3/sqlite3_9.vcproj
@@ -65,6 +65,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				OutputFile="&quot;..\shareaza\$(PlatformName)\$(ConfigurationName)\sqlite3.dll&quot;"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -142,6 +143,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkIncremental="2"
+				OutputFile="&quot;..\shareaza\$(PlatformName)\$(ConfigurationName)\sqlite3.dll&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="17"
