Added the setting for smart video series detection
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7232 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -998,21 +998,21 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Library"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "&Options:",IDC_STATIC,5,5,139,85,WS_GROUP
+    GROUPBOX        "&Options:",IDC_STATIC,5,5,139,98,WS_GROUP
     CONTROL         "Remember folder views",IDC_STORE_VIEWS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,17,126,12
     CONTROL         "Watch library folders",IDC_WATCH_FOLDERS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,31,126,12
     CONTROL         "Quick hashing (Uses more CPU)",IDC_HIGH_HASH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,59,126,12
     CONTROL         "Allow others to browse shares",IDC_BROWSE_FILES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,45,126,12
-    GROUPBOX        "&Recent Files:",IDC_STATIC,5,92,139,84,WS_GROUP
-    LTEXT           "Remember:",IDC_STATIC,15,112,46,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_RECENT_TOTAL,65,112,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_RECENT_TOTAL_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,101,112,8,12
-    LTEXT           "files",IDC_STATIC,105,112,30,12,SS_CENTERIMAGE
-    LTEXT           "For up to:",IDC_STATIC,15,132,46,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_RECENT_DAYS,65,132,35,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_RECENT_DAYS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,101,132,8,12
-    LTEXT           "days",IDC_STATIC,105,132,30,12,SS_CENTERIMAGE
-    PUSHBUTTON      "Clear History Now",IDC_RECENT_CLEAR,34,153,75,15
+    GROUPBOX        "&Recent Files:",IDC_STATIC,5,105,139,71,WS_GROUP
+    LTEXT           "Remember:",IDC_STATIC,15,117,46,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_RECENT_TOTAL,65,117,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_RECENT_TOTAL_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,101,117,8,12
+    LTEXT           "files",IDC_STATIC,105,117,30,12,SS_CENTERIMAGE
+    LTEXT           "For up to:",IDC_STATIC,15,137,46,12,SS_CENTERIMAGE
+    EDITTEXT        IDC_RECENT_DAYS,65,137,35,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "Spin1",IDC_RECENT_DAYS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,101,137,8,12
+    LTEXT           "days",IDC_STATIC,105,137,30,12,SS_CENTERIMAGE
+    PUSHBUTTON      "Clear History Now",IDC_RECENT_CLEAR,34,155,75,15
     GROUPBOX        "&Safe to Open:",IDC_STATIC,150,5,125,85,WS_GROUP
     COMBOBOX        IDC_SAFE_TYPES,160,18,60,63,CBS_SIMPLE | CBS_AUTOHSCROLL | CBS_SORT | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Add",IDC_SAFE_ADD,225,18,40,15
@@ -1026,6 +1026,8 @@ BEGIN
     PUSHBUTTON      "",IDC_COLLECTIONS_BROWSE,245,188,23,20
     CONTROL         "Create ghost files when deleting",IDC_MAKE_GHOSTS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,74,126,10
+    CONTROL         "Smart video series detection",IDC_SMART_SERIES_DETECTION,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,88,107,10
 END
 
 IDD_FILE_METADATA DIALOG  0, 0, 246, 218
